src/builder/tests/snapshots/ciboulette2postgres__builder__tests__insert__relationship_internal_single_include_all.snap
---
source: src/builder/tests/insert.rs
expression: res

---
(
    "WITH \n\"cte_peoples_insert\" AS (INSERT INTO \"public\".\"peoples\" (\"public\".\"peoples\".\"first-name\", \"public\".\"peoples\".\"last-name\", \"public\".\"peoples\".\"favorite_color\") VALUES ($0, $1, $2) RETURNING *), \"cte_peoples_data\" AS (SELECT \"cte_peoples_insert\".\"id\"::TEXT AS \"id\", $3::TEXT AS \"type\", JSON_BUILD_OBJECT($4, \"cte_peoples_insert\".\"age\", $5, \"cte_peoples_insert\".\"first-name\", $6, \"cte_peoples_insert\".\"gender\", $7, \"cte_peoples_insert\".\"last-name\", $8, \"cte_peoples_insert\".\"twitter\")  AS \"data\" FROM \"cte_peoples_insert\"), \"cte_favorite_color_data\" AS (SELECT \"public\".\"favorite_color\".\"id\"::TEXT AS \"id\", $9::TEXT AS \"type\", JSON_BUILD_OBJECT($10, \"public\".\"favorite_color\".\"color\")  AS \"data\" FROM \"public\".\"favorite_color\" WHERE \"public\".\"favorite_color\".\"id\" IN (SELECT \"cte_peoples_insert\".\"favorite_color\" FROM \"cte_peoples_insert\")), \"cte_rel_articles_rel_data\" AS (SELECT \"public\".\"people-article\".\"id\"::TEXT AS \"id\", $11::TEXT AS \"type\", JSON_BUILD_OBJECT($12, \"public\".\"people-article\".\"article_id\", $13, \"public\".\"people-article\".\"people_id\")  AS \"data\" FROM \"public\".\"people-article\" WHERE \"public\".\"people-article\".\"people_id\" = \"cte_peoples_data\".\"id\"), \"cte_rel_articles_data\" AS (SELECT \"public\".\"articles\".\"id\"::TEXT AS \"id\", $14::TEXT AS \"type\", JSON_BUILD_OBJECT($15, \"public\".\"articles\".\"body\", $16, \"public\".\"articles\".\"title\")  AS \"data\" FROM \"public\".\"articles\" WHERE \"public\".\"articles\".\"id\" IN (SELECT \"cte_rel_articles_rel_data\".\"article_id\" FROM \"cte_rel_articles_rel_data\") SELECT * FROM \"cte_peoples_data\" UNION ALL SELECT * FROM \"cte_favorite_color_data\" UNION ALL SELECT * FROM \"cte_rel_articles_data\" UNION ALL SELECT * FROM \"cte_rel_articles_rel_data\"",
    Ciboulette2SqlArguments {
        inner: [
            Text(
                Some(
                    "Hello",
                ),
            ),
            Text(
                Some(
                    "World",
                ),
            ),
            Text(
                Some(
                    "8759b021-0932-40cb-8386-e1a83da1c73e",
                ),
            ),
            Text(
                Some(
                    "peoples",
                ),
            ),
            Text(
                Some(
                    "age",
                ),
            ),
            Text(
                Some(
                    "first-name",
                ),
            ),
            Text(
                Some(
                    "gender",
                ),
            ),
            Text(
                Some(
                    "last-name",
                ),
            ),
            Text(
                Some(
                    "twitter",
                ),
            ),
            Text(
                Some(
                    "favorite_color",
                ),
            ),
            Text(
                Some(
                    "color",
                ),
            ),
            Text(
                Some(
                    "people-article",
                ),
            ),
            Text(
                Some(
                    "article_id",
                ),
            ),
            Text(
                Some(
                    "people_id",
                ),
            ),
            Text(
                Some(
                    "articles",
                ),
            ),
            Text(
                Some(
                    "body",
                ),
            ),
            Text(
                Some(
                    "title",
                ),
            ),
        ],
    },
)
